--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
-<body onload="render();">
+<body onload="render()">
     <div>
         <header>
             <div>
@@ -21,6 +21,10 @@
         </header>
     </div>
     <main>
+        <div id="imgoverlay" class="overlay d_none">
+            <button class="close-btn" onclick="toggleOverlay()">X</button>
+            <div id="singleImg"></div>
+        </div>
         <h1>Your personal photo album</h1>
         <div id="content"></div>
     </main>
