--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         </header>
     </div>
     <main>
-        <div id="imgoverlay" class="overlay d_none">
-            <button class="close-btn" onclick="toggleOverlay()">X</button>
-            <div id="singleImg"></div>
-        </div>
+        <div id="imgoverlay" class="overlay d_none"></div>
         <h1>Your personal photo album</h1>
         <div id="content"></div>
     </main>
